Fix Supabase API key - use JWT token instead of publishable key

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         // Supabase Configuration
         const SUPABASE_URL = "https://dlfqzerwhxoyvzolxoux.supabase.co";
-        const SUPABASE_ANON_KEY = "sb_publishable_ngeQdUAgquje4f2D8FNk3w_pP_p2GPq";
+        const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRsZnF6ZXJ3aHhveXZ6b2x4b3V4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg3NjE4MTgsImV4cCI6MjA4NDMzNzgxOH0.YN8PEk0BJk4DEYGXhSPXR0la3ZZgkp1MjJhLz_J2tF4";
 
         // Инициализация Supabase
         let supabase = null;
