Switch Supabase SDK CDN from unpkg to jsdelivr for better reliability

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Supabase SDK - загружаем синхронно -->
-    <script src="https://unpkg.com/@supabase/supabase-js@2.39.0/dist/umd/supabase.js"></script>
+    <!-- Supabase SDK - загружаем синхронно через jsdelivr -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
 
     <style>
         body {
