Add debug logs to check if script executes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <div id="root"></div>
 
     <script type="text/babel">
+        console.log('=== SCRIPT STARTED ===');
+        console.log('React available:', typeof React);
+        console.log('ReactDOM available:', typeof ReactDOM);
+
         const { useState, useEffect } = React;
 
         // Supabase Configuration
